Fix Come to Brazil song, adds hor scroll on mobile and grid on desktop.

--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
+html,
 body {
 	overflow-x: hidden;
 }
 .ov-hide {
 	overflow-x: hidden;
-}
-.scroll-hor {
-	overflow-x: auto;
-}
-.scroll-hor::-webkit-scrollbar {
-	display: none;
-}
-.scroll-hor {
-	-ms-overflow-style: none;
-	scrollbar-width: none;
 }
 
 .bh7 {
@@ -25,8 +16,6 @@ body {
 .comfortable {
 	padding: 3.33em !important;
 }
-
-/* Define o aspecto da div .square para um quadrado e alinha oticamente svg de "play" dentro do quadrado .thumbnail. */
 .square {
 	aspect-ratio: 1/1;
 }
@@ -151,14 +140,15 @@ input:focus {
 }
 
 .piss-search {
-	height: 7vh;
+	color: #bce954;
+	background-color: black;
+	height: fit-content !important;
+	width: 100%;
 	display: flex;
 	align-items: center;
-	margin-top: 3rem;
-	width: 100%;
+	margin: 3rem 0;
 	border-radius: 0;
-	background-color: black;
-	color: #bce954;
+	padding: 1.75rem;
 }
 .piss-search.active,
 .piss-search:hover,
@@ -180,6 +170,12 @@ input:focus {
 	filter: invert(100%);
 	-webkit-filter: invert(100%);
 }
+.piss-item {
+	line-height: 150%;
+}
+.piss-item > a:hover {
+	text-decoration: underline;
+}
 
 #dados,
 #termos-e-condicoes,
@@ -187,7 +183,43 @@ input:focus {
 	width: 1.5rem !important;
 	height: 1.5rem !important;
 }
-
+#player {
+	height: fit-content;
+	width: 100%;
+	left: 0;
+}
+.baudio-wrap {
+	background-color: #bce954;
+	display: flex;
+	align-items: center;
+}
+.baudio-play {
+	display: flex;
+	padding: 0.5rem;
+}
+.baudio-play svg path {
+	fill: black;
+}
+.baudio-progress {
+	background-color: #bce954;
+	filter: invert(100%);
+	-webkit-filter: invert(100%);
+}
+.baudio-wrap .baudio-title,
+.baudio-wrap .baudio-artist {
+	color: black;
+	text-shadow: none;
+}
+.baudio-wrap {
+	margin: 0;
+}
+#player > div {
+	display: none;
+}
+#player1:target,
+#player2:target {
+	display: flex;
+}
 table {
 	border: solid 2px black !important;
 }
@@ -211,8 +243,47 @@ tbody tr:hover {
 	-webkit-filter: invert(100%);
 }
 
-@media only screen and (min-width: 745px) {
+/* Scroll on mobile */
+@media only screen and (max-width: 600px) {
+	.scroll-hor {
+		overflow-x: auto;
+	}
+	.scroll-hor::-webkit-scrollbar {
+		display: none;
+	}
+	.scroll-hor {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+	table.responsive tr {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		border-color: black;
+	}
+	table.responsive td {
+		display: inline-block;
+		padding: 0;
+	}
+}
+/* Mobile Touchscreens */
+@media (pointer: none) and (pointer: coarse) {
 	.piss-search {
 		height: 14vh;
+	}
+	.scroll-hor {
+		display: flex;
+		flex-wrap: wrap !important;
+	}
+}
+/* Desktops */
+@media (hover: hover) and (pointer: fine) {
+	.scroll-hor {
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+	.scroll-hor a {
+		display: block !important;
+		margin-bottom: 1.5rem;
 	}
 }
